--- a/index.html
+++ b/index.html
@@ -48,15 +48,33 @@
 <body>
 
   <div class="grid">
-    <a href="pagina_a-c.html" class="button">A-C</a>
-    <a href="pagina_d-f.html" class="button">D-F</a>
-    <a href="pagina_g-i.html" class="button">G-I</a>
-    <a href="pagina_j-l.html" class="button">J-L</a>
-    <a href="pagina_m-o.html" class="button">M-O</a>
-    <a href="pagina_p-r.html" class="button">P-R</a>
-    <a href="pagina_s-u.html" class="button">S-U</a>
-    <a href="pagina_v-x.html" class="button">V-X</a>
-    <a href="pagina_y-z.html" class="button">Y-Z</a>
+    <a href="pagina_a.html" class="button">A</a>
+    <a href="pagina_b.html" class="button">B</a>
+    <a href="pagina_c.html" class="button">C</a>
+    <a href="pagina_d.html" class="button">D</a>
+    <a href="pagina_e.html" class="button">E</a>
+    <a href="pagina_f.html" class="button">F</a>
+    <a href="pagina_g.html" class="button">G</a>
+    <a href="pagina_h.html" class="button">H</a>
+    <a href="pagina_i.html" class="button">I</a>
+    <a href="pagina_j.html" class="button">J</a>
+    <a href="pagina_k.html" class="button">K</a>
+    <a href="pagina_l.html" class="button">L</a>
+    <a href="pagina_m.html" class="button">M</a>
+    <a href="pagina_n.html" class="button">N</a>
+    <a href="pagina_o.html" class="button">O</a>
+    <a href="pagina_p.html" class="button">P</a>
+    <a href="pagina_q.html" class="button">Q</a>
+    <a href="pagina_r.html" class="button">R</a>
+    <a href="pagina_s.html" class="button">S</a>
+    <a href="pagina_t.html" class="button">T</a>
+    <a href="pagina_u.html" class="button">U</a>
+    <a href="pagina_v.html" class="button">V</a>
+    <a href="pagina_w.html" class="button">W</a>
+    <a href="pagina_x.html" class="button">X</a>
+    <a href="pagina_y.html" class="button">Y</a>
+    <a href="pagina_z.html" class="button">Z</a>
+
   </div>
 
 </body>
