Add CSS styles for layout and button interactions; refactor HTML to link stylesheet

--- a/index.html
+++ b/index.html
@@ -2,51 +2,10 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="estilo.css">
   <title>Dicionário A-Z</title>
-  <style>
-    body {
-      background-color: #57a1f8;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      gap: 30px;
-      padding: 50px;
-    }
-
-    .button {
-      background-color: #fbb6c2;
-      color: #000;
-      text-align: center;
-      padding: 20px 40px;
-      border-radius: 40px;
-      font-weight: bold;
-      font-size: 20px;
-      text-decoration: none;
-      box-shadow: 2px 2px 8px rgba(0,0,0,0.2);
-      transition: transform 0.2s ease;
-      width: 180px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .button:hover {
-      transform: scale(1.05);
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 30px;
-      max-width: 800px;
-      margin: auto;
-    }
-  </style>
 </head>
 <body>
-
   <div class="grid">
     <a href="pagina_a.html" class="button">A</a>
     <a href="pagina_b.html" class="button">B</a>
