modified:   estilo.css 	modified:   gerar_html.py 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -4,71 +4,85 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="estilo.css">
   <title>Dicionário de Termos do Meio Ambiente</title>
+  <style>
+    #letras { display: none; }
+  </style>
 </head>
 <body>
-  <h1>Dicionário de Termos do Meio Ambiente</h1>
-  <div class="grid"> 
+  <h1>Bem-vindo ao Dicionário de Termos do Meio Ambiente</h1>
+  <div class="quadro-explicacao">
+    Este dicionário tem como objetivo reunir e explicar os principais termos relacionados ao meio ambiente, sustentabilidade, ecologia e áreas afins.
+    Ele foi criado para auxiliar estudantes, professores, pesquisadores e entusiastas da área em compreender melhor os conceitos fundamentais para a preservação ambiental.<br>
+    <br>
+    Navegue pelas letras para encontrar definições e fontes confiáveis sobre cada termo.
+  </div>
+  <button class="revela-letras" onclick="document.getElementById('letras').style.display='block'; this.style.display='none';">Acessar Dicionário</button>
 
-    <div class="letra">
-      <a href="pagina_a.html" class="button">A</a>
-    </div>  
+  <div id="letras">
+    <h2>Escolha a letra do seu termo:</h2>
+    <div class="grid"> 
 
-    <div class="letra">
-      <a href="pagina_b.html" class="button">B</a>
-    </div>  
+      <div class="letra">
+        <a href="pagina_a.html" class="button">A</a>
+      </div>  
 
-    <div class="letra">
-      <a href="pagina_c.html" class="button">C</a>
-    </div>  
+      <div class="letra">
+        <a href="pagina_b.html" class="button">B</a>
+      </div>  
 
-    <div class="letra">
-      <a href="pagina_d.html" class="button">D</a>
-    </div>  
+      <div class="letra">
+        <a href="pagina_c.html" class="button">C</a>
+      </div>  
 
-    <div class="letra">
-      <a href="pagina_e.html" class="button">E</a>
-    </div>  
+      <div class="letra">
+        <a href="pagina_d.html" class="button">D</a>
+      </div>  
 
-    <div class="letra">
-      <a href="pagina_f.html" class="button">F</a>
-    </div>  
+      <div class="letra">
+        <a href="pagina_e.html" class="button">E</a>
+      </div>  
 
-    <div class="letra">
-      <a href="pagina_g.html" class="button">G</a>
-    </div>  
+      <div class="letra">
+        <a href="pagina_f.html" class="button">F</a>
+      </div>  
 
-    <div class="letra">
-      <a href="pagina_h.html" class="button">H</a>
-    </div>  
+      <div class="letra">
+        <a href="pagina_g.html" class="button">G</a>
+      </div>  
 
-    <div class="letra">
-      <a href="pagina_i.html" class="button">I</a>
-    </div>  
+      <div class="letra">
+        <a href="pagina_h.html" class="button">H</a>
+      </div>  
 
-    <div class="letra">
-      <a href="pagina_j.html" class="button">J</a>
-    </div>  
+      <div class="letra">
+        <a href="pagina_i.html" class="button">I</a>
+      </div>  
 
-    <div class="letra">
-      <a href="pagina_l.html" class="button">L</a>
-    </div>  
+      <div class="letra">
+        <a href="pagina_j.html" class="button">J</a>
+      </div>  
 
-    <div class="letra">
-      <a href="pagina_v.html" class="button">V</a>
-    </div>  
+      <div class="letra">
+        <a href="pagina_l.html" class="button">L</a>
+      </div>  
 
-    <div class="letra">
-      <a href="pagina_x.html" class="button">X</a>
-    </div>  
+      <div class="letra">
+        <a href="pagina_v.html" class="button">V</a>
+      </div>  
 
-    <div class="letra">
-      <a href="pagina_y.html" class="button">Y</a>
-    </div>  
+      <div class="letra">
+        <a href="pagina_x.html" class="button">X</a>
+      </div>  
 
-    <div class="letra">
-      <a href="pagina_z.html" class="button">Z</a>
-    </div>  
+      <div class="letra">
+        <a href="pagina_y.html" class="button">Y</a>
+      </div>  
 
+      <div class="letra">
+        <a href="pagina_z.html" class="button">Z</a>
+      </div>  
+
+    </div>
   </div>
 </body>
 </html>
